Bug 96174 - "File - Save to Remote Server" spits out "Error saving document $document: The specified device is invalid", when trying to save to GDrive
Summary: "File - Save to Remote Server" spits out "Error saving document $document: Th...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: All All
: medium normal
Assignee: Giuseppe Castagno (aka beppec56)
URL:
Whiteboard: target:5.2.0 target:5.1.1
Keywords:
: 98828 (view as bug list)
Depends on:
Blocks: CMIS
  Show dependency treegraph
 
Reported: 2015-12-01 09:39 UTC by Thomas Hackert
Modified: 2016-10-25 19:02 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2015-12-01 09:39:21 UTC
Hello @ll,
I hope, I have chosen the right component. If I was wrong, feel free to change it to the right component ... ;)

Steps to reproduce:
0. Maybe you need to enable "Tools - Options - LibreOfficeDev - General - LibreOfficeDeb dialogs" first to be able to test this ... ;)
1. Open Writer
2. Create a new document (maybe just insert "This is a test." or something like that ... ;) ) or reopen an existing one.
3. Go to "File "Save to Remote Server"
4. Click on "Add service"
5. Select "Type" "Google Drive"
6. Enter your user name and password.

On my system (Debian Testing AMD64 with LO Version: 5.1.0.0.beta1-buildfix1
Build ID: 13010a13177025f633c9b85adcb3edf6920e44e3
Threads 4; Ver: 4.2; Render: default; 

Locale: de-DE (de_DE.UTF-8)
, parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux with Germanophone lang- as well as helppack) LO spits out the error message

<quote>
Error saving the document $Document:
The specified device is invalid.
</quote>

... :( And it does not matter, if I just enter my user name or "username@googlemail.com". I see this error message both times ... :(
Sorry for the inconvenience
Thomas.
Comment 1 ribotb 2015-12-03 19:44:12 UTC
Hi,

I confirm there is a problem with 'Save remote file'.

With an already established connection to my Google Drive:

Case 1:
- I create a new document
- I save this document (File > Save to Remote Server).
After saving, the File menu is unavailable (although not greyed, click has no effect). So, File > Close or File > Exit, for example, is not possible.
- To quit LO I click on  [X].
- I rerun LO. After connection ut appears that the document is not created!
Remark: However, a thumb has been created in Start Center.

Case 2:
- I open an existing document on my Google Drive;
- I modify this document;
- I save this document (File > Save to Remote Server).
Again, after saving, File menu is unavailable.
To quit LO I click on  [X].
- I rerun LO and I reopen my document: the changes have not been saved!
Remak: the changes appears in the thumb in Start Center.

On Win7/x86 with
Version: 5.1.0.0.beta1-buildfix1
Build ID: 13010a13177025f633c9b85adcb3edf6920e44e3
Threads 2; Ver: Windows 6.1; Render: default; 
Locale : fr-FR (fr_FR)


Bernard
Comment 2 krajcsi 2015-12-09 09:36:00 UTC
I can confirm #1.

Also, if I try to open a remote file (File > Open remote file; Add service; specify name and password for Google Drive; OK), the "The specified device is invalid." error message is given.

Version: 5.1.0.0.beta2
Build ID: 53054959a12edc6510f51b94ddc9b73d27aedaf6
Threads 2; Ver: 3.19; Render: default; 
Locale: en-US (en_US.UTF-8)
Linux Mint 17.2
Comment 3 krajcsi 2015-12-09 09:38:13 UTC
(In reply to krajcsi from comment #2)
> I can confirm #1.
> 
> Also, if I try to open a remote file (File > Open remote file; Add service;
> specify name and password for Google Drive; OK), the "The specified device
> is invalid." error message is given.
> 
> Version: 5.1.0.0.beta2
> Build ID: 53054959a12edc6510f51b94ddc9b73d27aedaf6
> Threads 2; Ver: 3.19; Render: default; 
> Locale: en-US (en_US.UTF-8)
> Linux Mint 17.2

Sorry, I meant I can confirm the original description, not the Comment 1 (I don't have an established connection)
Comment 4 Thomas Hackert 2015-12-09 10:10:41 UTC
Hello ribotb, krajcsi, *,
thanks or confirming my issue :) As you both can confirm it, I set the status to new.
Thanks again and have a nice day
Thomas.
Comment 5 Giuseppe Castagno (aka beppec56) 2016-01-05 17:07:16 UTC
Tested with 5.1.0rc1 and an active GDrive login.

In Linux:
LO Version: 5.1.0.1
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 8; Ver: Linux 3.13; Render: default; 

Locale: en-US (en_US.UTF-8)

Disabled LO native dialogs, used 'Remote Files' from left panel.
Pressing 'OK' after filling up the dialog fields for a GDrive connection, I got the error:

'The specified device is invalid.'

And couldn't go any further.

In Windows:
LO Version: 5.1.0.1
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 2; Ver: Windows 6.1; Render: default; 

Locale: en-US (en_US)

Repeat test as above, I was able to add a GDrive CMIS server.
Trying to save a new file doesn't work:  LO acts as if saving, but nothing is saved; no error is given.
Loading a file form GDrive, modify and save: load from GDrive, but saving doesn't work:  LO acts as if saving, but nothing is saved; no error is given.

Summing things up:

- Linux: it seems that --with-gdrive-client-id and --with-gdrive-client-secret are used with the wrong parameter, because if they weren't used GDrive CMIS type would not be present in the list;
- Windows: user GDrive credentials works, but the file can't be saved; be it save as new or saved after a change.

Building LO in Linux with my own --with-gdrive-client-id and --with-gdrive-client-secret values, it behaves as Windows.
Testing with LO master daily is not possible, --with-gdrive-client-id and --with-gdrive-client-secret values are not set at build time.
Comment 6 Giuseppe Castagno (aka beppec56) 2016-01-06 10:17:49 UTC
Git bisecting, found where the problem 'save on GDrive' first showed up, in commit:
<https://gerrit.libreoffice.org/gitweb?p=core.git;a=commitdiff;h=0398e1e3967332c49b6451b5d41bcf0357052d0b>
Comment 7 Giuseppe Castagno (aka beppec56) 2016-01-06 16:44:09 UTC
@Cristian:
 
It seems the values for '--with-gdrive-client-id' and '--with-gdrive-client-secret' in TDF official Linux builds needs a verification, whereas the TDF official Windows builds appears to be working.

Test sequence I used is in comment 5.

To check for '--with-gdrive-client-id' and '--with-gdrive-client-secret' behavior I did the following master build tests using my own Google OAuth 2.0 application credentials and a working Google account:
 
1) not setting '--with-gdrive-client-id' and '--with-gdrive-client-secret': GDrive fields are disabled;
2) setting '--with-gdrive-client-id' and '--with-gdrive-client-secret' with a single wrong character lead to 'The specified device is invalid.' error;
3) setting '--with-gdrive-client-id' and '--with-gdrive-client-secret' values right the login to GDrive works.
 
Unfortunately the error 'The specified device is invalid.' can be reported as well if you issue the wrong Google user/password pair, potentially leading to some confusion.
  
I reported the problem on Linux builds not not able to connect to GDrive on bug 94410 for 5.0 branch but  at the time I didn't have time to go deeper.

Let me know if you need other infos.
Comment 8 Giuseppe Castagno (aka beppec56) 2016-01-08 09:28:43 UTC
Repeated test in 5.0.4 as I did in comment 5, with a working gmail.com account (something like username@gmail.com).

Linux:
already did a test in 5.0.2.2, and 5.0.4.2 as reported in bug 94410, cannot connect.

In Windows:
Version: 5.0.4.2
Build ID: 2b9802c1994aa0b7dc6079e128979269cf95bc78
Locale: en-US (en_US)

Enabled LO native dialogs, set up a GDrive connection
After some tries LO connect to my Google Drive account.

Load a file from the gdrive account, edit, save: the file shows the editing.
Load a file from local PC save to GDrive: file saved without problem.

So, it seems the the saving issue that is part of this bug is actually a regression.
Comment 9 Commit Notification 2016-01-12 14:46:31 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a32b6f247b2cb92373bbce6fc2a314cb043e3bb

Related tdf#96174: save again on Google Drive.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-01-14 13:39:57 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5290bb4d221051b05f6146ddc4bf2a47ba662655&h=libreoffice-5-1

Related tdf#96174: save again on Google Drive.

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Giuseppe Castagno (aka beppec56) 2016-03-11 10:02:13 UTC
The Google Drive connection error 'The specified device is invalid.' is taken care of in bug 98416, limited to TDF official Linux distribution.
Comment 12 Giuseppe Castagno (aka beppec56) 2016-03-14 08:43:45 UTC
Daily masters are not Google Drive enabled, this one:

<http://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@70-TDF/gdrivetest2/LibreOfficeDev_5.2.0.0.alpha0_Linux_x86-64_deb.tar.gz>

It's a special version of master build created to check bug 98416.
It probably fixes this bug as well.

Note that there's still bug 87938 (two-factor auth for gdrive not working) - so if you want to test, you have to disable two-factor authentication temporarily.

At <http://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@70-TDF/gdrivetest2> rpms are available as well.
Comment 13 Buovjaga 2016-04-02 17:07:54 UTC
*** Bug 98828 has been marked as a duplicate of this bug. ***
Comment 14 Giuseppe Castagno (aka beppec56) 2016-05-13 07:42:18 UTC
Google Drive should now work again starting with this TDF version (not 2FA enabled):

Version: 5.1.3.2
Build ID: 644e4637d1d8544fd9f56425bd6cec110e49301b
CPU Threads: 8; OS Version: Linux 3.13; UI Render: default; 
Locale: en-US (en_US.UTF-8)

Explanation of the reason as reported on bug 98416, comment 33.
Comment 15 Susan Cragin 2016-06-22 16:24:30 UTC
Does not work with 5.1.4.1. 
1:5.1.4~rc1-1
FYI
Comment 16 Giuseppe Castagno (aka beppec56) 2016-06-25 07:26:48 UTC
(In reply to Susan Cragin from comment #15)
> Does not work with 5.1.4.1. 
> 1:5.1.4~rc1-1
> FYI

checked with:

Version: 5.1.4.2
Build ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
CPU Threads: 8; OS Version: Linux 3.13; UI Render: default; 
Locale: en-US (en_US.UTF-8)

using my Google Drive account, without 2FA (two-factor authentication).
Comment 17 Giuseppe Castagno (aka beppec56) 2016-06-25 07:40:51 UTC
Found fixed in 5.1.4.2