Related tdf#96174: save again on Google Drive.

Files can no longer be saved on Google Drive.
The bug was introduced in 0398e1e3967332c49b6451b5d41bcf0357052d0b.

Google Drive may have user name in the form:
name.surname@domain.com
In some places the user name should be escaped before using it.

Change-Id: Idee3e57c0ad1dcbbd517b60c387868bfc706f27e